--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Exomac – Business React JS Template</title>
+    <title>Chennai Roofings</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
